# study-gemini2

./: .gitignore  study-gemini2.code-workspace
reversi-py/: .coveragerc  .dockerignore  .gitignore  Dockerfile  LICENSE  ONBOARDING.md  README.md  TODO_TASK5.md  agent.py  board.py  coverage.json  game.py  gui.py  implementer_task2.prompt  main.py  modal_dialog.py  plan.md  pyproject.toml  requirements.txt  reversi.pu  reversi.py  startpoint.sh  ui_elements.py
reversi-py/.github/: copilot-instructions.md
reversi-py/agents/: __init__.py  alpha_zero_agent.py  api_agent.py  base_agent.py  first_agent.py  gain_agent.py  human_agent.py  mcts_agent.py  negamax_agent.py  pattern_agent.py  pattern_evaluator.py  random_agent.py  transposition_negamax_agent.py
reversi-py/config/: agent_config_utils.py  agents.py  agents_config.py  game_constants.py  i18n.py  theme.py
reversi-py/data/: pattern_weights_8x8.json
reversi-py/graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
reversi-py/models/: alpha_zero_iter000.pth  alpha_zero_iter001.pth  alpha_zero_iter002.pth  alpha_zero_iter003.pth  alpha_zero_iter004.pth  alpha_zero_iter005.pth  alpha_zero_iter006.pth  alpha_zero_iter007.pth  alpha_zero_iter008.pth  alpha_zero_iter009.pth  alpha_zero_latest.pth
reversi-py/norman/: __init__.py
reversi-py/postman/: reversi-api.postman_collection.json  reversi-api.postman_environment.json
reversi-py/pygame-sample/: README.md  main.py  startpoint.sh
reversi-py/scripts/: benchmark_agents.py  check.sh  check_coverage.py  ci_check.sh  docker_start.sh  docker_stop.sh  monitor_training.py  restart_server.sh  run_postman_api_tests.sh  start.sh  start_with_server.sh  stop_with_server.sh  test_alpha_zero_strength.py  test_gui_init.py  test_train_fixes.py  train_alpha_zero_simple.py  train_alphazero.py  train_alphazero_final.py  train_multistage.py  train_nega3000_aggressive.py  train_pattern_weights.py  train_stage1_nega500.py  train_stage2_nega3000.py  (+3 more)
(+107 files in other folders)
