[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reversi-py"
version = "0.1.0"
description = "Reversi game with AI agents"
requires-python = ">=3.14.2"
authors = [
    { name = "katoy", email = "katoy@media-5.co.jp" }
]
dependencies = [
    "pygame>=2.6.1",
    "flask>=3.1.3",
    "requests>=2.34.2",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.30.0",
]
dev = [
    "httpx2>=0.0.0",
    "ruff>=0.15.16",
    "mypy>=2.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.ruff]
exclude = ["tests"]
line-length = 88

[tool.ruff.lint]
ignore = ["E501"]  # Line too long (handled by formatter)
per-file-ignores = { "tests/**" = ["E402"] }

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "strength: NegamaxAgent の強さ検証テスト（デフォルト実行から除外）",
]
addopts = "-m 'not strength'"

[tool.setuptools]
packages = ["agents", "config", "server"]
